# fiber_unet_trainer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONFIG_GUIDE.md  Dockerfile  IMPROVEMENTS.md  README.md  SCRIPTS.md  User guide.docx  environment.yaml  export_model.py  pyproject.toml  run_training.bat  start_mlflow.bat
.github/workflows/: ci.yml
configs/: cnn_micronet_resnet50.yaml  diagnose_bottleneck.yaml  example.yaml  simple_sweep.yaml  unetPlus_resnet50.yaml  unet_resnet50.yaml
configs/Tests/: foreground_filter_sweep_example.yaml
configs/micronet/: unet_resnet50.yaml  unet_resnet50_improved.yaml  unet_resnet50_improved_full.yaml
fiberseg/: __init__.py  augmentations.py  callbacks.py  config.py  dataset.py  lit_module.py  models.py  predict_all.py  predict_tiles.py  sweep.py  train.py
fiberseg/tools/: add_gt_foreground_fraction.py  compute_dataset_stats.py  evaluate_predictions.py  export_torchscript.py  extract_micronet_weights.py  foreground_filter_sweep.py  inspect_checkpoint.py  label_fiber_type.py  label_pairs.py  list_split_files.py  lr_range_test.py  median_otsu_coverage.py  merge_sample_overview.py  preview_augmentations.py  rank_uncertainty.py  tune_threshold.py
notebooks/: investigate_image_metrics.ipynb  pair_labels.csv  split_summary.csv
tests/: check_model_logits.py  check_training_speed.py  debug_probability_response.py  test_augmentations.py  test_config_validation.py  test_dataset_foreground_filter.py  test_dataset_normalization.py  test_gpu_setup.py  test_improvements.py  test_micronet_forward.py  test_sweep_expansion.py
