[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiber-unet-trainer"
version = "0.1.0"
description = "Training pipeline for SEM fiber segmentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "lightning>=2.2",
  "segmentation-models-pytorch>=0.3.3",
  "albumentations>=1.4",
  "opencv-python-headless>=4.8",
  "tifffile>=2024.2.12",
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "mlflow>=2.11",
  "matplotlib>=3.8",
  "Pillow>=10.0",
  "scikit-image>=0.22",
  "scipy>=1.10",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.0",
  "pre-commit>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["fiberseg*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
exclude = ["tests", "mlruns", "exported_models"]

[tool.black]
line-length = 100
target-version = ["py311"]
